src/views/components/common/CalendarGrid/CalendarGrid.module.scss
@use 'sass:color';
@use 'src/views/styles/colors.module.scss';

.dayLabelContainer {
    display: flex;
    flex-direction: row;
    height: 13px;
    min-width: 40px;
    min-height: 13px;
    padding-bottom: 15px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    flex: 1 0 0;
}

.calendarGrid {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(13, 1fr);
}

.calendarRow {
    display: flex;
}

.calendar {
    // display: grid;
    // grid-template-columns: auto repeat(5, 1fr);
    gap: 10px;
}

.day {
    gap: 5px;
    color: colors.$burnt_orange;
    text-align: center;
    font-size: 14.22px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    margin-top: 20px;
    border-right: 1px solid #DADCE0;
    border-bottom: 1px solid #DADCE0;
    border-left: 1px solid #DADCE0;
}

.timeAndGrid {
    display: flex;
}

.timeColumn {
    display: flex;
    min-height: 573px;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    flex: 1 0 0;
    border-radius: var(--border-radius-none, 0px);
}

.timeBlock {
    display: flex;
    width: 50px;
    height: 40.279px;
    min-width: 50px;
    max-width: 50px;
    min-height: 40px;
    flex-direction: column;
    align-items: flex-end;

    .timeLabelContainer {
        display: flex;
        max-height: 20px;
        flex-direction: column;
        align-items: flex-end;
        gap: 17px;
        flex: 1 0 0;
        border-radius: var(--border-radius-none, 0px);
    }

    p {
        color: #1a2024;
        text-align: left;
        height: 6.6px;
        align-self: stretch;
        margin-top: -10px;
        margin-bottom: 0;

        /* Type scale/small */
        font-family: 'Roboto Flex';
        font-size: 14.22px;
        font-style: normal;
        font-weight: 500;
        line-height: normal;
    }
}

